fixed image scaling issue on smaller screens

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -360,7 +360,6 @@ footer a:hover {
     display: none;
   }
   .inner {
-    width: 94%;
     margin: 0 auto;
   }
 }
